package adapter;

public class OldCoffeeMachine {

  void selectA() {}
  void selectB(){};
}
